--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <nav>
                 <div>
                     <ul class="row">
-                        <li class="col-md">Inicio</li>
-                        <li class="col-md">Acerca de</li>
-                        <li class="col-md">Trabajos</li>
-                        <li class="col-md">Contacto</li>
+                        <li class="col-md"><a href="#">Inicio</a></li>
+                        <li class="col-md"><a href="#">Interiores</a></li>
+                        <li class="col-md"><a href="#">Exteriores</a></li>
+                        <li class="col-md"><a href="#">Videos</a></li>
+                        <li class="col-md"><a href="#">Contacto</a></li>
                     </ul>
                 </div>
             </nav>
