--- a/index.html
+++ b/index.html
@@ -23,27 +23,35 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/nav.style.css">
     <title>AD render</title>
 </head>
 <body>
     <header class="container">
         <div class="banner row">
             <div class="logo">
-                <img src="images/logo.png" alt="logo">
+                <a href="index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
             <nav>
                 <div>
                     <ul class="row">
-                        <li class="col-md"><a href="#">Inicio</a></li>
-                        <li class="col-md"><a href="#">Interiores</a></li>
-                        <li class="col-md"><a href="#">Exteriores</a></li>
-                        <li class="col-md"><a href="#">Videos</a></li>
-                        <li class="col-md"><a href="#">Contacto</a></li>
+                        <li class="col-md"><a href="index.html">Exteriores</a></li>
+                        <li class="col-md"><a href="index.html">Interiores</a></li>
+                        <li class="col-md"><a href="index.html">Productos</a></li>
+                        <li class="col-md"><a href="index.html">Maqueta Virtual 3D</a></li>
+                        <li class="col-md"><a href="index.html">Contacto</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+
+    <section class="container">
+        <div>
+            <p>Hello World</p>
+        </div>
+    </section>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
 </html>
