Entries examples added

--- a/index.html
+++ b/index.html
@@ -47,8 +47,31 @@
     </header>
 
     <section class="container">
-        <div>
-            <p>Hello World</p>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="container entry">
+                    <h3>Hello World</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum doloremque ducimus veniam rem eum sed voluptate, quos sequi alias autem praesentium nihil non quaerat, saepe voluptates odit, tempora sunt dicta?
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="container entry">
+                    <h3>Hello World</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum doloremque ducimus veniam rem eum sed voluptate, quos sequi alias autem praesentium nihil non quaerat, saepe voluptates odit, tempora sunt dicta?
+                    </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="container entry">
+                    <h3>Hello World</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum doloremque ducimus veniam rem eum sed voluptate, quos sequi alias autem praesentium nihil non quaerat, saepe voluptates odit, tempora sunt dicta?
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
