--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 <body>
     <header class="container">
         <div class="banner row">
-            <div class="logo">
+            <div class="logo col-md-2">
                 <a href="index.html"><img src="images/logo.png" alt="logo"></a>
             </div>
-            <nav>
-                <div>
+            <nav class="col-md-10">
+                <div class="container">
                     <ul class="row">
                         <li class="col-md"><a href="index.html">Exteriores</a></li>
                         <li class="col-md"><a href="index.html">Interiores</a></li>
