Photos and their styles added

--- a/exteriores.html
+++ b/exteriores.html
@@ -22,7 +22,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ext.style.css">
     <link rel="stylesheet" href="css/nav.style.css">
     <title>AD render</title>
 </head>
@@ -48,12 +48,40 @@
 
     <section class="container">
         <div class="row">
-            <div class="col-md">
-                <div class="container entry">
-                    <h3>Hello World</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum doloremque ducimus veniam rem eum sed voluptate, quos sequi alias autem praesentium nihil non quaerat, saepe voluptates odit, tempora sunt dicta?
-                    </p>
+            <div class="column col-md-4">
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/v1.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/v3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="column col-md-4">
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/v4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/h2.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="column col-md-4">
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/v2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container entry">
+                        <img src="images/exteriores/h1.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
