--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                         <div class="carousel-item">
                             <img class="d-block img-fluid" style="width:100%" src="images/Carousel/3.jpg" alt="Third slide">
                         </div>
+                        <div class="carousel-item">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/4.jpg" alt="Fourth slide">
+                        </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
