Header sits in a different file

--- a/arquitectura.html
+++ b/arquitectura.html
@@ -21,30 +21,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://www.w3schools.com/lib/w3.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/ext.style.css">
     <link rel="stylesheet" href="css/nav.style.css">
     <title>AD render</title>
 </head>
 <body>
-    <header class="container">
-        <div class="banner row">
-            <div class="logo col-md-2">
-                <a href="index.html"><img src="images/logo.png" alt="logo"></a>
-            </div>
-            <nav class="col-md-10">
-                <div class="container">
-                    <ul class="row">
-                        <li class="col-md"><a href="exteriores.html">Exteriores</a></li>
-                        <li class="col-md"><a href="interiores.html">Interiores</a></li>
-                        <li class="col-md"><a href="index.html">Productos</a></li>
-                        <li class="col-md"><a href="index.html">Maqueta Virtual 3D</a></li>
-                        <li class="col-md"><a href="index.html">Panorámicas 360</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
+    <div w3-include-html="assets/header.html"></div>
+    <script>w3.includeHTML();</script>
 
     <section class="container">
         <div class="row">
