--- a/index.html
+++ b/index.html
@@ -27,27 +27,13 @@
     <link rel="stylesheet" href="css/nav.style.css">
     <link rel="stylesheet" href="css/home.style.css">
     <link rel="stylesheet" href="css/form.style.css">
+    <link rel="stylesheet" href="css/carousel.style.css">
     <title>AD render</title>
 </head>
 <body>
-    <header class="container">
-        <div class="banner row">
-            <div class="logo col-md-2">
-                <a href="index.html"><img src="images/logo.png" alt="logo"></a>
-            </div>
-            <nav class="col-md-10">
-                <div class="container">
-                    <ul class="row">
-                        <li class="col-md"><a href="arquitectura.html">Arquitectura</a></li>
-                        <li class="col-md"><a href="interiores.html">Diseño de Interiores</a></li>
-                        <li class="col-md"><a href="index.html">Panorámicas 360°</a></li>
-                        <li class="col-md"><a href="index.html">Maqueta Virtual 3D</a></li>
-                        <li class="col-md"><a href="index.html">Muebles y Pisos</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-    </header>
+
+    <div w3-include-html="assets/header.html"></div>
+    <script>w3.includeHTML();</script>
 
     <div class="container">
         <section class="container">
