Render info page

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
                     <h4>¿Qué es un render?</h4>
                     <p>
                         Es una tecnología que, utilizando gráficos por ordenador
-                        permita la creación de imágenes y animaciones.
+                        permita la creación de imágenes y animaciones ...
+                        <a href="render.html">leer más</a>
                     </p>
                     <h4>Usos y beneficios</h4>
                     <p>
