Info pages added

--- a/index.html
+++ b/index.html
@@ -110,24 +110,27 @@
                     <p>
                         Es una tecnología que, utilizando gráficos por ordenador
                         permita la creación de imágenes y animaciones ...
-                        <a href="render.html">leer más</a>
+                        <a href="render.html"> leer más</a>
                     </p>
                     <h4>Usos y beneficios</h4>
                     <p>
                         Es la solución ideal para explicar, comunicar, presentar
-                        o promocionar cualquier idea o proyecto de forma visual.
+                        o promocionar cualquier idea o proyecto de forma visual ...
+                        <a href="usos.html"> leer más</a>
                     </p>
                 </div>
                 <div class="col entry">
-                    <h4>¿Por qué necesitas un render?</h4>
+                    <h4>¿Qué tipo de render necesito?</h4>
                     <p>
-                        Porque es más confiable para los usuarios ver y examinar
-                        antes de comprar. Porque una buena presentación.
+                        Para elegir correctamente el render que uno requiere se
+                        debe tener presente varias consideraciones:
                     </p>
-                    <h4>¿Para quienes funciona un render?</h4>
                     <p>
-                        Para constructoras o empresas que necesitan cerrar ventas
-                        antes de construir. Para diseñadores, etc.
+                        Se debe determinar a quién va dirigido el proyecto y
+                        cuál es el objetivo que se pretende lograr: si se
+                        muestran las primeras ideas sobre un proyecto que está
+                        sujeto a modificaciones ...
+                        <a href="quetipo.html"> leer más</a>
                     </p>
                 </div>
                 <div class="col entry">
@@ -135,12 +138,14 @@
                     <p>
                         Los proyectos de Arquitectura 3D y renderizado se realizan
                         a través de un proceso de trabajo cuyos puntos principales
-                        son.
+                        son ...
+                        <a href="como.html"> leer más</a>
                     </p>
                     <h4>Proceso de trabajo</h4>
                     <p>
                         Para solicitar un render 3D de baja, media o alta calidad
-                        seguimos el ...
+                        seguimos el siguiente procedimiento ...
+                        <a href="proceso.html"> leer más</a>
                     </p>
                 </div>
             </div>
