--- a/usos.html
+++ b/usos.html
@@ -37,30 +37,47 @@
         <section class="container">
             <div class="row">
                 <div class="col entry">
-                    <h1>¿Qué es un render?</h1>
+                    <h1>Usos y Beneficios de un Render</h1>
                     <p>
-                        Es una tecnología que, utilizando gráficos por ordenador permite la
-                        creación de imágenes tridimensionales y animaciones con calidad
-                        fotorrealista y de gran impacto visual, el cual está destinado a
-                        mostrar y comercializar los proyectos e ideas de una manera sencilla
-                        y visual; así como para terminar de elegir materiales, acabados,
-                        iluminación, etc. y de definir espacios y volumetrías.
+                        Es la solución ideal para explicar, comunicar, presentar
+                        y promocionar cualquier idea o proyecto de forma visual
+                        antes de su elaboración. En Arquitectura nos permite
+                        ver el resultado final de una obra sin haber llegado
+                        a construirla, facilitándonos el estudio de su volumetría,
+                        la definición de espacios, materiales e iluminación.
+                        También es útil para mostrar diseños y procesos que son
+                        complicados de entender a través del texto o explicación.
                     </p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-6 entry">
-                    <img src="images/render/1.jpg" alt="render-example-1">
-                </div>
-                <div class="col-md-6 entry">
-                    <img src="images/render/2.jpg" alt="render-example-2">
-                </div>
-            </div>
 
-            <div class="row">
-                <div class="col entry">
-                    <iframe width="720" height="480" frameborder="0" src="https://www.youtube.com/embed/e_XWqT0b1m8?mute=1&autoplay=1">
-                    </iframe>
+                    <p>
+                        La importancia de esta tecnología es evidente para
+                        facilitar la comunicación de ideas y proyectos de cara
+                        al público; la promoción, la exposición de venta o la
+                        presentación en concurso de proyectos para las
+                        administraciones, exposiciones, congresos, etc.
+                    </p>
+
+                    <p>
+                        Los diseñadores, arquitectos, ingenieros, paisajistas,
+                        interioristas, etc. pueden conocer de antemano el
+                        resultado de sus trabajos, permitiéndoles valorar el
+                        impacto visual de la construcción en su entorno o ver
+                        su evolución.
+                    </p>
+
+                    <p>
+                        Las presentaciones con renders dotan a tu proyecto y a
+                        tu empresa de una imagen de alto impacto visual,
+                        permitiéndote desmarcarte de tus competidores de una
+                        forma sencilla pero impactante.
+                    </p>
+
+                    <p>
+                        Solicitar un render es importante porque es más confiable
+                        para los usuarios ver y examinar antes de comprar. Una
+                        buena presentación aumenta la oportunidad de compra,
+                        porque elimina las dudas de un posible cliente.
+                    </p>
                 </div>
             </div>
         </section>
