--- a/arquitectura.html
+++ b/arquitectura.html
@@ -25,53 +25,81 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/ext.style.css">
     <link rel="stylesheet" href="css/nav.style.css">
+    <link rel="stylesheet" href="css/showcase.style.css">
     <title>AD render</title>
 </head>
 <body>
     <div w3-include-html="assets/header.html"></div>
     <script>w3.includeHTML();</script>
 
-    <section class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/v1.jpg" alt="">
+            <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/1.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/2.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/3.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/4.jpg" alt="Fourth slide">
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/v3.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/v4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/h2.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/v2.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/exteriores/h1.jpg" alt="">
-                    </div>
-                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-    </section>
+    </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/1.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/2.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/3.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Carousel/4.jpg" alt="Fourth slide">
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
