--- a/interiores.html
+++ b/interiores.html
@@ -25,103 +25,108 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/ext.style.css">
     <link rel="stylesheet" href="css/nav.style.css">
+    <link rel="stylesheet" href="css/showcase.style.css">
     <title>AD render</title>
 </head>
 <body>
     <div w3-include-html="assets/header.html"></div>
     <script>w3.includeHTML();</script>
 
-    <section class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h4.jpg" alt="">
+            <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/1.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/2.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/3.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/4.jpg" alt="First slide">
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v1.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v3.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h3.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h8.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h1.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v4.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v6.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="column col-md-4">
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h6.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v2.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h2.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/v5.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h7.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="container entry">
-                        <img src="images/interiores/h8.jpg" alt="">
+                    <div class="carousel-item">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/5.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/6.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/7.jpg" alt="First slide">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/1.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/2.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/3.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/4.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/5.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/6.jpg" alt="Second slide">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/1.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/2.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/3.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/4.jpg" alt="First slide">
+                        </div>
+                        <div class="col-md-4">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor2/5.jpg" alt="Second slide">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </body>
 </html>
