--- a/maquetas.html
+++ b/maquetas.html
@@ -37,22 +37,31 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/1.jpg" alt="First slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/2.jpg" alt="Second slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/3.jpg" alt="Third slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/3.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/4.jpg" alt="Second slide">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/4.jpg" alt="Fourth slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/5.jpg" alt="Third slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/5.jpg" alt="Fourth slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/6.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/7.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor1/8.jpg" alt="Second slide">
                         </div>
                     </div>
                 </div>
@@ -65,14 +74,28 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/1.png" alt="First slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/3.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/4.jpg" alt="Second slide">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/5.jpg" alt="Third slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/6.jpg" alt="Second slide">
+                        </div>
+                        <div class="col-md-3">
+                            <img class="d-block img-fluid" style="width:100%" src="images/Maquetas/hor2/7.jpg" alt="Second slide">
                         </div>
                     </div>
                 </div>
