--- a/arquitectura.html
+++ b/arquitectura.html
@@ -38,21 +38,21 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/4.jpg" alt="Fourth slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/4.jpg" alt="Fourth slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/ver1/5.jpg" alt="Fourth slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Exteriores/ver1/5.jpg" alt="Fourth slide">
                         </div>
                     </div>
                 </div>
@@ -66,13 +66,13 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
                         </div>
                     </div>
                 </div>
