--- a/assets/header.html
+++ b/assets/header.html
@@ -8,8 +8,8 @@
                 <ul class="row">
                     <li class="col-md"><a href="arquitectura.html">Arquitectura</a></li>
                     <li class="col-md"><a href="interiores.html">Diseño de Interiores</a></li>
-                    <li class="col-md"><a href="panoramicas.html">Panorámicas 360°</a></li>
-                    <li class="col-md"><a href="maqueta.html">Maqueta Virtual 3D</a></li>
+                    <li class="col-md"><a href="360-display/index.html">Panorámicas 360°</a></li>
+                    <li class="col-md"><a href="maquetas.html">Maqueta Virtual 3D</a></li>
                     <li class="col-md"><a href="myp.html">Muebles y Pisos</a></li>
                 </ul>
             </div>
