--- a/interiores.html
+++ b/interiores.html
@@ -72,24 +72,24 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/4.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/4.jpg" alt="Third slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/5.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/5.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid" style="width:100%" src="images/Interiores/vertical/6.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-vert" style="width:100%" src="images/Interiores/vertical/6.jpg" alt="Second slide">
                         </div>
                     </div>
                 </div>
