Images height fixed

--- a/myp.html
+++ b/myp.html
@@ -37,13 +37,13 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Pisos/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Pisos/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Pisos/3.jpg" alt="Third slide">
                         </div>
                     </div>
@@ -57,24 +57,24 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/3.jpg" alt="Third slide">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/4.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/5.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 img-hor">
                             <img class="d-block img-fluid" style="width:100%" src="images/Muebles/6.jpg" alt="Third slide">
                         </div>
                     </div>
