--- a/arquitectura.html
+++ b/arquitectura.html
@@ -66,13 +66,13 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
+                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/1.jpg" alt="First slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
+                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/2.jpg" alt="Second slide">
                         </div>
                         <div class="col-md-4">
-                            <img class="d-block img-fluid img-hor" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
+                            <img class="d-block img-fluid img-hor1" style="width:100%" src="images/Exteriores/hor1/3.jpg" alt="Third slide">
                         </div>
                     </div>
                 </div>
