--- a/interiores.html
+++ b/interiores.html
@@ -37,27 +37,31 @@
             <div id="carouselExampleControls" class="carousel slide col" data-ride="carousel">
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/1.jpg" alt="First slide">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/2.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-3">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/3.jpg" alt="Third slide">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/4.jpg" alt="First slide">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/5.jpg" alt="Second slide">
                         </div>
-                        <div class="col-md-3">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/6.jpg" alt="Third slide">
                         </div>
-                        <div class="col-md-3">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="col-md-6">
                             <img class="d-block img-fluid" style="width:100%" src="images/Interiores/hor1/7.jpg" alt="First slide">
                         </div>
                     </div>
